# clc-miner-gpu

./: .gitignore  Cargo.toml  README.md  clcminer.toml  exchange.py
src/: config.rs  get_job.rs  gpu.rs  main.rs  report.rs  submit.rs
