[package]
name = "clc-miner2"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_toml = "0.0.1"
serde_json = "1.0.140"
toml = "0.8.20"
config = "0.15.11"
colored = "3.0.0"
num-bigint = "0.4.6"
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
tokio = { version = "1.44.1", features = ["full"] }
secp256k1 = { version = "0.30.0", features = ["rand", "hashes"]  }
rand = "0.9.0"
hex = "0.4"
crossterm = "0.28.1"
urlencoding = "2.1.3"
